# nope.gl

./: CHANGELOG.md  Makefile  README.md  configure.py  nope.viewer.py  tktest.py  tl.py
.github/workflows/: ci_linux.yml  ci_mac.yml  ci_mingw.yml  ci_msvc.yml  ci_win.yml  doc.yml  first.yml  mac_dmg.yml  second.yml
doc/tuto/: start.md
libnodegl/: .gitignore  Makefile  api.c  colorconv.c  colorconv.h  gctx.h  gctx_gl.c  gen_doc.c  glcontext.c  glcontext.h  glcontext_eagl.m  glcontext_egl.c  glcontext_nsgl.m  glcontext_x11.c  graphicstate.h  hwconv.c  internal.h  math_utils.c  math_utils.h  meson.build  node_animated.c  node_buffer.c  node_camera.c  node_circle.c  node_filters.c  node_group.c  node_mmap.c  node_renderother.c  node_rotate.c  node_rotatequat.c  node_scale.c  node_skew.c  node_text.c  node_timerangefilter.c  node_timerangemodes.c  node_transform.c  node_translate.c  node_uniform.c  node_userselect.c  node_userswitch.c  (+25 more)
libnodegl/doc/: libnodegl.md
libnodegl/glsl/: filter_liftgammagain.glsl
libnopegl/: meson.build  nodes.specs
ngl-tools/: .gitignore  Makefile  common.c  common.h  ipc.c  ipc.h  ngl-desktop.c  ngl-ipc.c  ngl-timeline.c  player.c
pynodegl/: _pynodegl.pyx  gen_specs.py  meson.build  pynodegl.pyx  setup.py
pynopegl/: _pynopegl.pyx
pynopegl-utils/: setup.py
scripts/: lsan-suppr.txt  valgrind.suppr
tests/: anim.py  api.py  aspect.py  benchmark.py  blending.py  color.py  data.py  depth_stencil.py  live.py  meson.build  path.py  rtt.py  scope.py  shape.py  text.py  texteffect.py  texture.py  transform.py  userlive.py  velocity.py
(+130 files in other folders)
